--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,10 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   </head>
   <body>
-    <h1 class"center">Rabbit Drop</h1>
+	<div class="center">
+    	<h1>Rabbit Drop</h1>
+    	<a href="https://github.com/MateoPeri/rabbit-drop">GitHub</a>
+	</div>
     <script src="../static/js/jquery-3.4.1.js"></script>
     <script src="../static/js/dropzone-5.7.0/dist/dropzone.js"></script>
     <link rel="stylesheet" href="../static/js/dropzone-5.7.0/dist/dropzone.css">
